maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:18: error: type mismatch;
 found   : Unit
 required: Boolean
    if (!aMurOuest(x,y)){
    ^